[package]
name = "peek-chrome"
version = "0.1.0"

repository = "https://github.com/tacogips/peek-chrome"
edition = "2021"
license = "MIT"
rust-version = "1.58"
keywords = [
	"fzf",
	"zsh",
]
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md"
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version ="3.0.14", features = ["derive"]}
dirs = "4.0.0"
rusqlite = "0.26.3"
serde = {version = "1.0.136" , features = ["derive"]}
serde_json = {version ="1.0.78"}
thiserror = "1.0.30"
chrono = "0.4"

[dev-dependencies]
uuid = { version = "0.8.2",features = ["v4"] }


[profile.release]
opt-level = "z"
lto = true
